[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "ue"

[lib]
name = "uesim"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
kafka = "0.10.0"
# libc = "0.2"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
