[package]
name = "execsnoop"
version = "0.1.0"
authors = ["hejack0207@sina.com"]
license = "LGPL-2.1-only OR BSD-2-Clause"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.23.3"
vmlinux = { path = "../vmlinux" }

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.23.3"
libc = "0.2"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
